Fixed UnsupportedOperationEx in recipes toggle command.